fix overflow x carusel

--- a/style.css
+++ b/style.css
@@ -380,6 +380,17 @@ nav img {
     animation-iteration-count: infinite;
     animation-direction: alternate;
     
+    
+    
+}
+
+.containers {
+    position: relative;
+    display: flex;
+    overflow-x: hidden;
+
+
+    
 }
 
  .box {
@@ -397,6 +408,7 @@ nav img {
     display: flex;
     align-items: end;
     margin: 17px;
+    
 }
 
 .sbox {
